--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -100,13 +100,6 @@ In this step, a cryptic email address is automatically created that builds the f
 
 In the lower part, enter all email addresses that are allowed to send messages to the cryptic, forwarding email address stated above. You can add as many email addresses as you like by clicking on *Add new entry* (material:add[]). Existing email addresses can be deleted by clicking on *Remove entry* (material:delete[]). *_Note:_* At least one email address has to be entered here.
 
-////
-[#verifizierung-e-mail-adressen]
-==== Verifizierung der E-Mail-Adressen
-
-In this step, you can see the progress of the verification process. plentymarkets sends an email to all email addresses that you entered in the previous step <<#email-forwarding, Email forwarding>>. The system then checks whether the email addresses are valid and the forwarding works correctly.
-////
-
 [#settings-email-despatch]
 ==== Settings for sending emails
 
@@ -116,8 +109,10 @@ After having entered the login details, select the encryption method and enter t
 
 *_Note for mailbox.org mailboxes:_* Enter the port *465* and select *SSL* as encryption method.
 
+
 ////
 TODO: ggf. neue Tabelle einfügen mit aktuellen Zahlen analog zu dieser Tabelle hier: https://knowledge.plentymarkets.com/crm/e-mails-versenden#200
+
 ////
 
 Select also in this step an email template for the email despatch.
@@ -242,8 +237,6 @@ In the overview, whispered messages are shown in _italics_. +
 |You can always capture minutes for a message as long as it is a <<#intable-whisper-mode, whispered message>>. To do so, click on material:more_vert[] first. If you then activate the button *Capture minutes* (material:toggle_on[role=skyBlue]), minutes will be captures for this message. The button changes from material:forward_to_inbox[role=skyBlue] *SEND* to material:visibility_off[role=skyBlue] *CAPTURE AND SEND*. +
 *_Note:_* You can only activate the button *Capture minutes* if the <<#intable-whisper-mode, whisper mode>> has been activated for this message.
 
-
-
 |[#intable-timer]*Show timer* (material:more_vert[])
 |You can start a timer for every message. To do so, click on material:more_vert[] first. If you then activate the *Show timer* button (material:toggle_on[role=skyBlue]), the timer next to the button material:forward_to_inbox[role=skyBlue] *SEND* will start running automatically. +
 Click on material:pause_circle[] to stop the timer or on material:play_circle[] to start the timer again.
@@ -251,14 +244,9 @@ Click on material:pause_circle[] to stop the timer or on material:play_circle[] 
 |[#intable-manage-inboxes]*Manage inboxes* (material:more_vert[])
 |First, click on material:more_vert[] and then on material:edit[] *Manage inboxes*. You will be redirected to the *Setup » Assistants » Basic setup* menu. Here, you can edit the inboxes via the available *Messenger configuration* <<#complete-assistant, assistants>>.
 
-//|[#intable-name-inbox]_Name of the currently selected inbox_
-//| Click on material:arrow_drop_down[] to select another inbox from the drop-down list. The list shows the names of the inboxes that you set up by <<#complete-assistant, completing the assistant>>.
-
 |[#intable-send]*SEND*
 |By clicking on material:forward_to_inbox[role=skyBlue] *SEND*, the message will be sent. +
 *_Note:_* If you capture minutes for the message, the button changes to material:visibility_off[role=skyBlue] *CAPTURE AND SEND*. If you whisper the message, this button is changed to material:visibility_off[role=skyBlue] *WHISPER*.
-
-
 
 |====
 
@@ -274,7 +262,7 @@ Searching for a conversation in the Messenger:
 
 . Go to *CRM » Messenger (Test phase)*. +
 * *_Option 1:_* Click on material:search[] to see a list of all conversations.
-* *_Option 2:_* Enter a search term from the conversation’s subject in the search field and select the appropriate filter from the suggestion list.
+* *_Option 2:_* Enter a search term from the conversation’s subject or the message content in the search field and select the appropriate filter from the suggestion list.
 * *_Option 3:_* Click on material:tune[] to narrow down the search results with filters.
 . Note the explanations about the filters in <<#table-search-message>>.
 
@@ -286,6 +274,9 @@ Searching for a conversation in the Messenger:
 
 |[#intable-filter-subject]*Subject*
 |Enter a word to search for conversations containing this word in their subject line.
+
+|[#intable-filter-message]*Message*
+|Enter a word to search for contents within the message body.
 
 |[#intable-filter-short-id]*Short ID*
 |Enter the ID of the conversation to only search for the conversation with this ID.
@@ -314,8 +305,6 @@ Available values: *Done* and *Not done*.
 
 |[#intable-filter-contact-id]*Contact ID*
 |Enter an ID to only search for conversations that are linked with this contact ID.
-
-
 
 |[#intable-filter-order-id]*Order ID*
 |Enter an ID to only search for conversations that are linked with this order ID. +
@@ -456,8 +445,6 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |[#intable-overview-subscribed]*Subscribed*
 |The symbol material:done[] in the column material:notifications[] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
 
-
-
 |[#intable-overview-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
 
@@ -468,7 +455,7 @@ Click on *Configure columns* (material:settings[]) on the top right to deactivat
 [#reply-to-message]
 == Replying to a message
 
-Search the <<#search-conversation, conversation>> that contains the message you want to reply to. Click on the message to reply to it.
+Search the <<#search-conversation, conversation>> that contains the message you want to reply to. Click on the message to reply to it. When replying to an existing message, you can see all recipients that will receive this message. You can add more recipients. If desired, select a template from the drop-down list *Template* and a template language.
 
 The only difference to <<#create-message, creating a message>> is that you can show and hide the subject line when replying to an existing message by clicking on the symbol material:more_vert[] (see <<#image-messenger-reply-to-message>>).
 
@@ -478,7 +465,7 @@ image::crm:messenger-reply-to-message.png[width=640, height=360]
 
 You can adjust the subject line when the option *Subject* is activated (material:toggle_on[role=skyBlue]). If you have _not_ activated the *Subject* option (material:toggle_off[]), the *Subject* field is not visible when replying to the message. The currently selected subject is then automatically transferred when replying to the message.
 
-////
+//// 
 TODO: wieder einfügen, wenn diese Funktion wieder eingebaut wurde.
 
 [#switch-view]
@@ -487,10 +474,83 @@ TODO: wieder einfügen, wenn diese Funktion wieder eingebaut wurde.
 It is possible to change the view in the Messenger from a table to a list. To do so, click on *Change view* (material:list[]) in the top right of the overview. +
 The table view is selected by default.
 
+The selected conversation with all the messages contained therein is shown in the lower left section and the editor to reply to the messages is shown in the lower right section.
+The selected conversation with all the messages contained therein is shown in the upper right section and the editor to reply to the messages is shown in the lower right section.
+////
 
+////
+[#zuordnungsparameter]
+== Nachrichten im Messenger zuordnen
 
-  The selected conversation with all the messages contained therein is shown in the lower left section and the editor to reply to the messages is shown in the lower right section.
-  The selected conversation with all the messages contained therein is shown in the upper right section and the editor to reply to the messages is shown in the lower right section.
+Messages in the messenger are assigned with the help of keywords or text parameters that are automatically recognised by your plentymarkets system.
+
+Note the keywords that are used for the assignment as listed in <<#table-assignment-messenger>>. Both upper and lower case letters can be used.
+
+[[table-assignment-messenger]]
+.Assignment parameters and permitted spellings
+[cols="1,3"]
+|====
+|Parameter |Alternative spellings
+
+| *ID of the ticket*
+|Ticket / ID / Nr / No / nummer / number + digits +
+Examples: +
+Ticket ID: 123 +
+Ticket id 123 +
+TicketID #123 +
+ID: #123 +
+ID: 123 +
+Permitted symbols: +
+Space, period, colon, minus, equals sign, hash key, round brackets, square brackets
+
+|*Conversation*
+|conversation / conversations / konversation / konversationen +
+uuid / id / nr / nummer / number / no +
+Permitted symbols: +
+Space, period, colon, minus, equals sign, hash key
+
+| *Customer data*
+|Customer ID or Customer No.: Kunde / Customer + ID / Nr / No / Nummer / number + digits +
+Customer name: Kunden / Customer + Name + digits +
+Examples: +
+Customer ID: 123 +
+Customer ID 123 +
+Customer id 123 +
+CustomerID123 +
+Customer number 123 +
+Permitted symbols: +
+Space, period, colon, minus, equals sign, hash key
+
+| *Customers*
+|kunde / kunden / customer / id / no / number / nummer +
+Permitted symbols: +
+Space, period, colon, minus, equals sign, hash key
+
+| *Order*
+|Auftrag(s) / Order + ID / Nr / No + digits +
+Examples: +
+Order ID: 123 +
+Order ID 123 +
+OrderID123 +
+Order id 123 +
+Permitted symbols: +
+Space, period, colon, minus, equals sign, hash key
+
+|*Amazon order*
+|Bestellnummer / Bestellung / Commande / Order / Pedido / Ordine / ID +
+Permitted symbols: +
+Space, colon, hash key
+
+| *Invoice No.*
+|Rechnung(s) / invoice + ID / Nr / No / Nummer / number + digits +
+Examples: +
+Invoice ID: 123 +
+invoice ID 123 +
+Invoice No 123 +
+Permitted symbols: +
+Space, period, colon, minus, equals sign, hash key
+
+|====
 ////
 
 [#context-menu]
@@ -631,10 +691,6 @@ Subscribing for a conversation:
 . Click on material:notifications_active[] *Subscribe for conversation*. +
 → In the column material:notifications[] *Subscribed*, the symbol material:done[] is shown.
 
-////
-TODO: ist das korrekt? → Du erhältst oben rechts in deinem plentymarkets Backend eine Benachrichtigung über das Symbol material:notifications[].
-////
-
 [#unsubscribe-conversation]
 ==== Unsubscribing from a conversation
 
@@ -770,11 +826,7 @@ Assigning tags to the message:
 . Open the message by clicking in the line of the message.
 . Click on material:local_offer[] *Assign tags to conversation* to see a list of all tags that you have already <<#tags-messenger, created>> for the areas *Messages* and *Messages (billable)*. +
 *_Tip:_* If you have created a lot of tags for the *Messages* or *Messages (billable)* areas, enter the name of the tag in the search field *Search for tag*.
-. Select (material:check_box[role=skyBlue]) the tags that you want to assign to the message.
-
-////
-TODO: FRAGE: Wenn nur die Nachricht den Tag erhält, wie verhält es sich dann mit den Filtern in der Suche? Wird der Tag an einzelnen Nachrichten in der Suche berücksichtigt?
-////
+. Select (material:check_box[role=skyBlue]) the tags that you want to assign to the message. 
 
 [#attachments-single-message]
 === Downloading attachments
@@ -808,10 +860,6 @@ Deleting a message:
 → A window opens and you need to confirm your decision.
 . Click on *Yes*. +
 → The conversation is deleted and moved to <<#trash, trash>>.
-
-////
-TODO: FRAGE: Wird die einzelne gelöschte Nachricht auch in den Papierkorb verschoben? Konnte ich im System nicht nachstellen.
-////
 
 [#paypal-dispute]
 == Link to PayPal Dispute plugin
@@ -946,8 +994,6 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |[#intable-new-messages-billed-minutes]*Billed minutes*
 |The symbol material:av_timer[] in the *Billed minutes* (material:av_timer[]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on material:arrow_upward[] to sort the table by the number of billed minutes.
 
-
-
 |[#intable-new-messages-subscribed]*Subscribed*
 |The symbol material:done[] in the column material:notifications[] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
 
@@ -1058,10 +1104,6 @@ You can also use the group function in the *My messages* area. The group functio
 == Trash
 
 In the navigation on the left-hand side of the Messenger, you can find the folder material:delete[] *Trash*. Here you can find all <<#context-menu-delete-conversation, deleted conversations>> and all<<#delete-single-message, deleted messages>>.
-
-////
-TODO: Wird es in Zukunft möglich sein, alle Nachrichten aus dem Papierkorb mit einem Klick zu entfernen (so wie bei "Papierkorb leeren" in E-Mail-Programmen? Oder werden die Nachrichten automatisch nach einem bestimmten Zeitraum gelöscht? Wird es möglich sein, Nachrichten aus dem Papierkorb "zurückzuholen", wenn ich die Konversation bzw. Nachricht auf "nicht abgeschlossen" setze?
-////
 
 You can have the following columns displayed in the trash folder of the Messenger:
 
