--- a/docs/de-de/modules/externe-webshops/pages/woocommerce.adoc
+++ b/docs/de-de/modules/externe-webshops/pages/woocommerce.adoc
@@ -1,22 +1,22 @@
 = WooCommerce
 :author: team-plenty-channel
 :keywords: woocommerce, woocommerce.com
-:description: Multi-Channel in plentymarkets: Richte die Schnittstelle zu Woocommerce in deinem plentymarkets System ein.
+:description: Multi-Channel in plentymarkets: Richte die Schnittstelle zu WooCommerce in deinem plentymarkets System ein.
 
-:galaxus:
-:market: Woocommerce
-:price-search-engine: Woocommerce
-:plugin-name: Woocommerce
+:woocommerce:
+:market: WooCommerce
+:price-search-engine: WooCommerce
+:plugin-name: WooCommerce
 :main-client:
-:plugin-link: https://marketplace.plentymarkets.com/en/woocommerce_5102
+:plugin-link: https://marketplace.plentymarkets.com/woocommerce_5102
 
-WooCommerce ist eine flexible Open-Source-E-Commerce-Lösung, die auf WordPress basiert. Egal, ob Du ein Unternehmen gründest, ein bestehendes stationäres Geschäft online schaltest oder Websites für Kunden entwirfst: Du kannst schnell loslegen und genau das Geschäft aufbauen, dass Du möchtest.
+WooCommerce ist eine flexible Open-Source-E-Commerce-Lösung, die auf WordPress basiert. Egal, ob du ein Unternehmen gründest, ein bestehendes stationäres Geschäft online schaltest oder Websites für Kunden:innen entwirfst: Du kannst schnell loslegen und genau das Geschäft aufbauen, das du möchtest.
 
 == WordPress installieren
 
 link:https://wordpress.org/[WordPress.org] dient als Content-Management-System und Startplattform für deinen Online-Handel mit WooCommerce. Wie du WordPress installierst erfährst du auf der Seite link:https://wordpress.org/support/article/how-to-install-wordpress/[How to install WordPress].
 
-== WooCommerce installieren
+== WooCommerce-Plugin von WordPress installieren
 
 Nachdem du WordPress installiert und eingerichtet hast, installierst du das WordPress-Plugin WooCommerce von der WordPress-Seite link:https://docs.woocommerce.com/document/installing-uninstalling-woocommerce/[Installing and Uninstalling WooCommerce].
 
@@ -44,66 +44,70 @@ Generiere WooCommerce API-Credentials aus dem WooCommerce-Dashboard. Diese Anmel
 
 == Plugin in plentymarkets installieren
 
-Um WooCommerce in plentymarkets nutzen zu können, installiere zuerst das link:https://marketplace.plentymarkets.com/woocommerce_5102[limango-Plugin^] in deinem plentymarkets System. Dieses und andere Plugins findest du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^].
+Um WooCommerce in plentymarkets nutzen zu können, installiere zuerst das link:https://marketplace.plentymarkets.com/woocommerce_5102[WooCommerce-Plugin^] in deinem plentymarkets System. Dieses und andere Plugins findest du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^].
 
 :plugin: WooCommerce
 :main-client:
-include::partial$plugin-installation.adoc[]
+include::maerkte:partial$plugin-installation.adoc[]
 
 == Auftragsherkunft aktivieren
 
 :referrer: WooCommerce
-:referrer-option: pass:quotes[Option *Galaxus*]
+:referrer-option: pass:quotes[Option *WooCommerce*]
 
-include::partial$auftragsherkunft-aktivieren.adoc[]
-→ Das Menü *Einrichtung » Märkte » WooCommerce* wird wählbar.
+include::maerkte:partial$auftragsherkunft-aktivieren.adoc[]
 
-*_Wichtig:_*
-
-* Das Plugin kann keine manuell erstellte Auftragsherkunft verwenden.
-* Das Plugin muss in dem Plugin-Set installiert sein, das mit dem Standard-Mandanten verknüpft ist.
+*_Wichtig:_* Das Plugin kann keine manuell erstellte Auftragsherkunft verwenden.
 
 == Schnittstelle in plentymarkets einrichten
 
 Nimm die folgenden Einstellungen in plentymarkets vor, um die Schnittstelle zu WooCommerce einzurichten. Halte dazu die Zugangsdaten bereit, die du nach der Registrierung von WooCommerce erhalten hast.
 
-=== Verbindung zur WooCommerce-API herstellen
+=== Verbindung zu WooCommerce-API herstellen
 
 Stelle eine Verbindung zur WooCommerce-API her. Dazu benötigst du die von WooCommerce bereitgestellten Zugangsdaten.
 
-. Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Verbindungsdetails*.
-. Wähle, über welchen *Mandanten* deine WooCommerce-Verbindung laufen soll.
-. Trage den *Host-Namen* ein. +
-*_Beispiel:_* `http://yourWebShopName.domain/ +
-*_Wichtig:_* Der Rückstrich [/] am Ende der eingetragenen URL ist Pflicht.
-. Gib den *Verbraucherschlüssel* ein.
-. Gib das *Verbraucher-Geheimnis* ein.
+[.instruction]
+Verbindung zu WooCommerce-API herstellen:
+
+. Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Verbindungsdetails*. +
+*_Das Menü wird nicht angezeigt?_* Dann aktiviere die Auftragsherkunft im Menü *Einrichtung » Aufträge » Auftragsherkunft*.
+. Wähle den *Mandanten*, über den deine WooCommerce-Verbindung laufen soll.
+. Gib den *Host-Namen* ein. +
+*_Beispiel:_* http://yourWebShopName.domain/ +
+*_Wichtig:_* Der Rückstrich [/] am Ende der URL ist Pflicht.
+. Gib den *Kundenschlüssel* ein.
+. Gib das *Kundengeheimnis* ein.
 . Klicke auf *Verbindung testen*.
 . Speichere die Einstellungen. +
 → Dein Plugin ist mit der WooCommerce-API verbunden. +
-*_Wichtig:_* Wenn du den WooCommerce-Webshop im Nachhinein änderst, musst du einen neuen Mandanten wählen, der bisher noch nicht mit einem WoCommerce-Webshop verbunden war. Sonst wird Aufträgen, die über die neue Verbindung importiert werden, möglicherweise Kund:innendaten der alten Verbindung zugeordnet.
+*_Wichtig:_* Wenn du den WooCommerce-Webshop im Nachhinein änderst, musst du einen neuen Mandanten wählen, der bisher noch nicht mit einem WoCommerce-Webshop verbunden war. Sonst werden Aufträgen, die über die neue Verbindung importiert werden, möglicherweise Kund:innendaten der alten Verbindung zugeordnet.
 
 [additional-shops]
 === _Optional:_ Weitere WooCommerce-Webshops verbinden
 
-Für jede neue Verbindung sind separate plentymarkets Mandanten und WooCommerce-Konten erforderlich. Pro WooCommerce-Konto benötigst du also einen separaten plentymarkets Mandaten.
+Für jede neue Verbindung sind ein separater plentymarkets Mandant und ein separtes WooCommerce-Konto erforderlich. Pro WooCommerce-Konto benötigst du also einen separaten plentymarkets Mandaten.
 
-*_Wichtig:_* Auch wenn du in einer vorhandenen Verbindung einen neuen WooCommerce-Webshop speicherst, musst du einen neuen Mandanten erstellen. Sonst wird Aufträgen, die über die neue Verbindung importiert werden, möglicherweise Kund:innendaten der alten Verbindung zugeordnet.
+*_Wichtig:_* Auch wenn du in einer vorhandenen Verbindung einen neuen WooCommerce-Webshop speicherst, musst du einen neuen Mandanten erstellen.
 
-Um eine zusätzliche Verbindung einzurichten:
+[.instruction]
+Weitere WooCommerce-Webshops verbinden:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Verbindungsdetails*.
 . Klicke auf *[+] Hinzufügen*.
 . Folge denselben Schritten wie bei der vorherigen Verbindung. +
-*_Tipp:_* Um zu einer anderen Plugin-Konfiguration zu wechseln, wähle den anderen WooCommerce-Webshop im Abschnitt *Webshops*
+*_Tipp:_* Um zu einer anderen Plugin-Konfiguration zu wechseln, wähle den anderen WooCommerce-Webshop im Abschnitt *Webshops*.
 
 === Germanized-Bereitschaft einrichten
 
-"Germanized" erweitert WooCommerce um wichtige Funktionen für den deutschen Markt. Das Plugins passt dein WooCommerce-Plugin an die speziellen Anforderungen des deutschen Marktes an.
+"Germanized" erweitert WooCommerce um wichtige Funktionen für den deutschen Markt. Das Plugin passt dein WooCommerce-Plugin an die speziellen Anforderungen des deutschen Marktes an.
+
+[.instruction]
+Germanized-Bereitschaft einrichten:
 
 . Verwende die Installationsanleitung auf link:https://wordpress.org/plugins/woocommerce-germanized/[WooCommerce], um *Germanized* zu installieren.
 . In plentymarkets, öffne das Menü *Einrichtung » Märkte » WooCommerce » Einstellungen » Abschnitt: Datenaustausch*.
-. Aktivierie die Option *Exportiere Daten zu 'Germanized-Plugin' spezifischen Eingabefeldern*.
+. Aktiviere die Option *Exportiere Daten zu 'Germanized-Plugin' spezifischen Eingabefeldern*.
 . Speichere die Einstellung.
 
 Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Artikelexports/der Aktualisierung verarbeitet werden:
@@ -115,22 +119,28 @@ Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Ar
 * Beim *Auftragsimport*: Die WooCommerce *DHL post number* importiert als *CRM » Kontante » Betroffener Kontat » Adressen Adresse » Typ: Postnummer*
 * Der *pro-Einheit-Basispreis* der Variante. Dieser Preis wird folgenderweise generiert: +
 *_Wichtig:_* _Der exportierte Basispreis berechnet sich aus dem der Variante zugeordneten WooCommerce-Verkaufspreis. Wenn auf deiner Variante auch ein Aktionspreis für WooCommerce definiert ist, wird auch dafür ein Basispreis generiert und exportiert. +
-  ** Für *Größe*: Meter, Zentimeter und Millimeter werden zum Zeitpunkt des Exports als Meterwerte ausgedrückt. Zoll werden als Zoll ausgedrückt.
-  ** For *Gewicht*:Kilogramm, Gramm und Milligramm werden zum Zeitpunkt des Exports als Kilogramm-Werte ausgedrückt, Unzen werden als Unzen ausgedrückt.
-  ** Für *Volumen*: Liter und Milliliter *_bis 250ml_* werden beim Export als Milliliter ausgedrückt. *_Ab 250ml_* wird der exportierte Wert als Liter ausgedrückt. Exportierte Werte, die Du in Litern definierst, halten sich an dieselbe Regel wie Liter und Milliliter.
+  ** *Größe*: Meter, Zentimeter und Millimeter werden zum Zeitpunkt des Exports als Meterwerte ausgedrückt. Zoll werden als Zoll ausgedrückt.
+  ** *Gewicht*: Kilogramm, Gramm und Milligramm werden zum Zeitpunkt des Exports als Kilogramm-Werte ausgedrückt, Unzen werden als Unzen ausgedrückt.
+  ** *Volumen*: Liter und Milliliter *_bis 250ml_* werden beim Export als Milliliter ausgedrückt. *_Ab 250ml_* wird der exportierte Wert als Liter ausgedrückt. Exportierte Werte, die du in Litern definierst, halten sich an dieselbe Regel wie Liter und Milliliter.
 
 === Plugin konfigurieren
 
 *_Wichtig:_* Artikelbezogene Importprozesse und Exportprozesse können nicht gleichzeitig aktiviert sein.
 
+[.instruction]
+Plugin konfigurieren:
+
+. Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Verbindungsdetails*. +
+*_Das Menü wird nicht angezeigt?_* Dann aktiviere die Auftragsherkunft im Menü *Einrichtung » Aufträge » Auftragsherkunft*.
+
 [[table-plugin-settings]]
 .Plugin-Einstellungen
-[cols="1,3a"]
+[cols="1,2a"]
 |===
 |Einstellung |Erläuterung
 
 | *Webshops*
-| Auswahl wechselt zwischen verfügbaren wooCommerce-Verbindungen.
+| Wechsele zwischen verfügbaren WooCommerce-Verbindungen.
 
 2+^| *Prozesse*
 
@@ -162,7 +172,7 @@ Folgende Daten werden importiert:
 
 Das korrekte plentymarkets Versandprofil wird beim Auftragsimport nur zugewiesen, wenn die Versandprofilnamen zwischen WooCommerce und plentymarkets übereinstimmen.
 
-Das Plugin erkennt nur Rabattartikel, die auf WooCommerce-Aufträgen enthalten sind. Rabatt-Campagnen werden nicht unterstützt. Der rabattierte Wert aus dem WooCommerce-Auftrag wird als separates Line-Item importiert.
+Das Plugin erkennt nur Rabattartikel, die auf WooCommerce-Aufträgen enthalten sind. Rabatt-Kampagnen werden nicht unterstützt. Der rabattierte Wert aus dem WooCommerce-Auftrag wird als separates Line-Item importiert.
 
 Der Auftragsimport führt auch eine *Paymentstatus-Aktualisierung* für schon importierte Aufträge durch.
 
@@ -173,12 +183,12 @@ Der Auftragsimport führt auch eine *Paymentstatus-Aktualisierung* für schon im
 * Stündlich für *500 zu 1500* Varianten.
 * Einmal am Tag für über *1500* Varianten.
 
-*_Wichtig:_* SKU-Matching muss existieren, damit dieser Prozess korrekt laufen kann.
+*_Wichtig:_* Die SKU müssen in plentymarkets und WooCommerce gleich sein, damit dieser Prozess korrekt laufen kann.
 
 | *Preisexport*
 | Läuft alle 15 Minuten.
 
-*_Wichtig:_* SKU-Matching muss existieren, damit dieser Prozess korrekt laufen kann. Das Plugin verwendet die Benutzerauswahl von WooCommerce *Einstellungen » Mehrwertsteuer » Preise mit Steuern eingegeben* um zu entscheiden, ob der exportierte Preis *Brutto* oder *NETTO* ist.
+*_Wichtig:_* Die SKU müssen in plentymarkets und WooCommerce gleich sein, damit dieser Prozess korrekt laufen kann. Das Plugin verwendet die Benutzerauswahl von WooCommerce *Einstellungen » Mehrwertsteuer » Preise mit Steuern eingegeben* um zu entscheiden, ob der exportierte Preis *Brutto* oder *NETTO* ist.
 
 | *Kundenimport*
 | Läuft einmal am Tag.
@@ -224,7 +234,7 @@ Beachte, dass das Plugin bestimmte WooCommerce-Kategorien löschen kann, wenn:
 *_Hinweis:_* Mit Artikeln verknüpfte Kategorien können auch beim *Artikelimport* importiert werden.
 
 |*Artikelexport*
-| * Läuft einmal am Tag für den ersten Import.
+| * Läuft einmal am Tag für den ersten Export.
 * Stündlich für nachfolgende Artikelaktualisierungen. +
 *_Wichtig:_* Das Plugin verarbeitet nur die WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
 
@@ -235,10 +245,9 @@ Folgende Daten werden exportiert:
 * *Artikeltext* als *Produkt Beschreibung*
 * *Erstelldatum* als *Veröffentlicht am:*
 * *Verkaufspreis* als *Regulärer Preis* +
-→ Verkaufspreis mit der kleinsten Postion im Artikel, der für WooCommerce freigeschaltet ist.
+*_Hinweis:_* Exportiert wird der Verkaufspreis mit der kleinsten Postion am Artikel, der für WooCommerce freigeschaltet ist.
 * *Aktionspreis* als *Angebotspreis*
-* Artikel verlinkte *Kategorien* +
-→ Die für WooCommerce freigeschaltet sind.
+* Mit Artikeln verlinkte *Kategorien*, die für WooCommerce freigeschaltet sind.
 * *Gewicht Brutto* als *Gewicht*
 * *Maße* als *Maße*
 * *MwSt.-Satz*
@@ -252,7 +261,7 @@ Folgende Daten werden exportiert:
 * *WB NETTO* als *Lagerbestandsmenge*
 
 |*Artikelimport*
-| Läuft einmal am Tag
+| Läuft einmal am Tag.
 
 Das Plugin verarbeitet nur die WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
 
@@ -270,7 +279,7 @@ Folgende Daten werden importiert:
 * *Attribute * Sichtbar auf der Produktseite* als *Eigenschaften*
 * *Tags* als *Meta-Keywords*
 * *Lagerbestandsmenge* als *Physischer Warenbestand*
-* *SKU* as *SKU*
+* *SKU* als *SKU*
 
 2+^| *Datenaustausch*
 
@@ -284,13 +293,13 @@ Folgende Daten werden importiert:
 | Aktiviere / Deaktiviere den Export neuer Artikel als *Entwürfe*.
 
 | *Automatische SKU-Erstellung basiert auf:*
-| Generiert SKUs für exportierte Varianten basierend auf Benutzerauswahl.
+| Generiert SKUs für exportierte Varianten.
 
 Auswahlmöglichkeiten sind:
 
-* *Leer* → erstellt keine SKU.
+* *Leer* (erstellt keine SKU)
 * *Variantennr.*
-* *Varianten Id*
+* *Varianten-ID*
 * *Barcode*
 
 *_Empfehlung:_* Verwende dasselbe Eingabefeld zur SKU-Generierung für alle WooCommerce-Webshops, die über das Plugin verwaltet werden.
@@ -308,10 +317,9 @@ Auswahlmöglichkeiten sind:
 
 Verfügbare Optionen sind:
 
-* *Keine*
-* *Alle*
-* *Nur ausgewählte Eigenschaften* +
-→ Wähle im Tab *Eigenschaften Export*, welche Eigenschaften für den Export freigeschaltet werden.
+* *Keine* = Keine Eigenschaften werden exportiert.
+* *Alle* = Alle Eigenschaften werden exportiert.
+* *Nur ausgewählte Eigenschaften* = Nur die Eigenschaften, die du im Tab *Eigenschaften Export* freischaltest, werden exportiert.
 
 | *Tags für Export / Import*
 | Tags aus folgender Quelle exportieren:
@@ -325,10 +333,10 @@ Verfügbare Optionen sind:
 2+^| *Importiere und exportiere Warenbestände aus:*
 
 | *Alle verfügbaren Lager (Vertrieb)*
-| Exportiert Bestandsmengen aus allen Lagern des Typs *Vertrieb*, die mit dem Artikel verknüpft sind.
+| Exportiert die Summe der Bestandsmengen aus allen Lagern des Typs *Vertrieb*, die mit dem Artikel verknüpft sind.
 
 | *Lager meine Wahl*
-| Wähle die Lager des Typs *Vertrieb*, aus denen Bestandsmengen exportiert werden.
+| Wähle die Lager des Typs *Vertrieb*, aus denen die Summe der Bestandsmengen exportiert werden sollen.
 
 2+^| *Auftragsimport Optionen*
 
@@ -350,18 +358,25 @@ Auswahlmöglichkeiten sind:
 
 2+^|*Auftragsimportstatus*
 
-| *Auftrag Status für eingehende Storno Anfragen:*
+| *Auftrag Status für eingehende Storno-Anfragen:*
 | Wähle einen Auftragsstatus für eingehende Stornoanfragen.
 
 | *Ab folgenden Status automatisch ablehnen:*
 | Für Aufträge ab diesem Status werden eingehende Stornoanfragen automatisch abgelehnt.
 
 |*Kontakt Import Optionen*
-| Wähle, welche Kundenklasse deinen Kund:innen beim Import zugewiesen wird.
+| Wähle, welche Kundenklasse deinen Kund:innen beim Import des Auftrags zugewiesen wird.
 
 |===
 
-=== Eigenschaften für den Artikelexport freischalten
+=== Eigenschaften für Artikelexport freischalten
+
+Wähle nun, welche plentymarkets Eigenschaften als WooCommerce-Attribute exportiert werden sollen.
+
+*_Wichtig:_* WooCommerce akzeptiert für Eigenschaften keine Datensätze, die länger als 28 Zeichen sind.
+
+[.instruction]
+Eigenschaften für Artikelexport freischalten:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Eigenschaften Export*.
 . Wähle den Webshop, für den du diese Funktion konfigurieren möchtest.
@@ -370,11 +385,12 @@ Auswahlmöglichkeiten sind:
 . Speichere die Einstellungen. +
 → Die freigeschaltete Eigenschaft wird in der Liste angezeigt.
 
-*_Wichtig:_* WooCommerce akzeptiert für Eigenschaften keine Datensätze, die länger als 28 Zeichen sind.
-
 === plentymarkets MwSt.-Sätze mit WooCommerce Steuerklassen verknüpfen
 
 Verknüpfe die Mehrwertsteuersätze aus plentymarkets mit den Steuerklassen aus WooCommerce, damit die Steuersätze beim Artikelexport korrekt zugeordnet werden.
+
+[.instruction]
+MwSt.-Sätze mit WooCommerce Steuerklassen verknüpfen:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » MwSt.-Satz Zuordnungen*.
 . Klick auf *[+] Hinzufügen*. +
@@ -389,13 +405,17 @@ Verknüpfe die Mehrwertsteuersätze aus plentymarkets mit den Steuerklassen aus 
 
 Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooCommerce » Hilfe*. Mit dieser Plugin-Hilfe kannst Du:
 
-* die Plugin-Bereitschaft prüfen.
-* Varianten-Exportbedingungen überprüfen.
-* das Startdatum für Warenbestandsexporte und Preisexporte anpassen.
-* alle 10 Minuten einen Artikel manuell exportieren.
-* alle 5 Minuten den Warenbestand einer Variante oder eines ganzen Artikels exportieren.
+* <<#1830035111, die Plugin-Bereitschaft prüfen>>
+* <<#9185536759, Varianten-Exportbedingungen überprüfen>>
+* <<#1819187541, das Startdatum für Warenbestandsexporte und Preisexporte anpassen>>
+* <<#4095862038, alle 10 Minuten einen Artikel manuell exportieren>>
+* <<#9054492717, alle 5 Minuten den Warenbestand einer Variante oder eines ganzen Artikels exportieren>>
 
+[#1830035111]
 === Plugin-Bereitschaft prüfen
+
+[.instruction]
+Plugin-Bereitschaft prüfen:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Plugin Bereitschaft*.
 . Klick auf *Überprüfen*. +
@@ -410,7 +430,11 @@ Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooComm
 * Konnte eine Verbindung zu WooCommerce.com hergestellt werden?
 * Wird die SDK-Datei korrekt bereitgestellt?
 
+[#9185536759]
 === Exportbedingungen einer Variante prüfen
+
+[.instruction]
+Exportbedingungen einer Variante prüfen:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Exportbedingungen*.
 . Wähle den Webshop, für den Du diese Variante prüfen möchtest.
@@ -437,15 +461,20 @@ Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooComm
 * Varianten  Attribut-Wert existiert für die ausgewählte Artikel-Exportsprache.
 * Die ausgewählte Variante hat keine aktuellen Änderungen und ist vom nächsten Artikelexport / -update ausgeschlossen.
 
-=== Stardatum für Warenbestandsexport und Preisexport anpassen
+[#1819187541]
+=== Startdatum für Warenbestandsexport und Preisexport anpassen
 
 Wenn der Warenbestandsabgleich oder Preisabgleich nicht alle erwarteten Artikel exportiert, kannst Du das Startdatum des Exports für diesen Prozess auf ein beliebiges Datum zurücksetzen. Das Plugin berücksichtigt dein definiertes Startdatum beim nächsten Lauf anstelle des notierten *last-run* Zeitstempels.
 
+[#4095862038]
 === Einen Artikel manuell exportieren
 
 Zu Testzwecken kannst Du mit dem Plugin alle 10 Minuten einen Artikel manuell exportieren.
 
 *_Hinweis:_* Verwende diese Funktion, um zu testen wie Exporte aussehen, bevor Du einen Bulk-Export von Artikeldaten durchführst.
+
+[.instruction]
+Einen Artikel manuell exportieren:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Artikelexport*.
 . Wähle den Webshop, für den du den Artikel exportieren möchtest.
@@ -455,34 +484,83 @@ Zu Testzwecken kannst Du mit dem Plugin alle 10 Minuten einen Artikel manuell ex
 
 *_Hinweis:_* Du hast einen oder mehrere Artikel auf WooCommerce gelöscht und möchtest die Daten neu exportieren? Der nächste Export bereinigt nur die Plugin-Datenbank. Deshalb wird dein Artikel erst im Export danach wieder zu WooCommerce exportiert.
 
+[#9054492717]
 == Tab: Warenbestand Export
 
 Zu Testzwecken kannst Du mit dem Plugin alle 5 Minuten Warenbestände für einen Artikel manuell exportieren. Für eine Variante kannst Du einen Export alle 3 Minuten anstossen.
 
-=== Warenbestand und Verkaufspreis für eine Variante manuell exportieren
+[tabs]
+====
+Warenbestand und Verkaufspreis für eine Variante exportieren::
++
+--
+[.instruction]
+Warenbestand und Verkaufspreis für eine Variante manuell exportieren:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Warenbestand Export*.
 . Wähle den Webshop, auf dem Du Warenbestände aktualisieren möchtest.
-. Gib eine gültige Varianten-ID ein.
+. Gib eine gültige *Varianten-ID* ein.
 . Klicke auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, wird der Warenbestand exportiert.
+--
+ 
+Warenbestand und Verkaufspreis für einen Artikel exportieren::
++
+--
 
-=== Warenbestand und Verkaufspreis für einen Artikel manuell exportieren
+[.instruction]
+Warenbestand und Verkaufspreis für einen Artikel manuell exportieren:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Warenbestand Export*
 . Wähle den Webshop, auf dem du Warenbestände aktualisieren möchtest.
-. Gib eine gültige Artikel-ID ein.
+. Gib eine gültige *Artikel-ID* ein.
 . Klicke auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, wird der Warenbestand exportiert.
+--
+====
 
-== Die Plugin-Ereignisaktionen
+[#8522072389]
+== Auftragsabwicklung automatisieren
 
-Mit den Ereignisaktionen des Plugins kannst Du mit WooCommerce Informationen über deine Aufträge austauschen. Weitere Informationen zum Thema plentymarkets Ereignisaktionen findest Du xref:automatisierung:ereignisaktionen.adoc[hier].
+Mit den xref:automatisierung:ereignisaktionen.adoc[Ereignisaktionen] des Plugins sendest Du WooCommerce Informationen über deine Aufträge.
 
+[#5583680407]
+=== Verfügbare Ereignisaktionen
+
+[[table-woocommerce-event-procedures]]
+.Ereignisaktionen für WooCommerce
+[cols="1,1a"]
+|===
+|Ereignisaktion |Erläuterung
+
+| *Sende Auftrag "Zahlung ausstehend" an WooCommerce*
+| Verschiebt den Auftrag bei WooCommerce in den Status *Zahlung ausstehend*.
+
+| *Sende Auftrag "In Bearbeitung" an WooCommerce*
+| Verschiebt den Auftrag bei WooCommerce in den Status *In Bearbeitung*.
+
+| *Sende Auftrag "In Wartestellung" an WooCommerce*
+| Verschiebt den Auftrag bei WooCommerce in den Status *In Wartestellung*.
+
+| *Sende Auftrag "Fertiggestellt" an WooCommerce*
+| Verschiebt den Auftrag bei WooCommerce in den Status *Fertiggestellt*.
+
+| *Sende Auftrag "Storniert/Abgebrochen" an WooCommerce*
+| Verschiebt den Auftrag bei WooCommerce in den Status *Storniert/Abgebrochen*.
+
+| *Sende Auftrag "Rückerstattet" an WooCommerce*
+| Verschiebt den Auftrag bei WooCommerce in den Status *Rückerstattet*.
+
+| *Sende Auftrag "Fehlgeschlagen" an WooCommerce*
+|Verschiebt den Auftrag bei WooCommerce in den Status *Fehlgeschlagen*.
+
+|===
+
+[#0746212710]
 === Beispiel: Ereignisaktion "Warenausgang Gebucht" einrichten
 
 . Öffne das Menü *Einrichtung » Aufträge » Ereignisaktionen*.
-. Klicke auf *[ + ]Hinzufügen*. +
+. Klicke auf *[ + ] Hinzufügen*. +
 → Das Fenster *Erstelle eine neue Ereignisaktion* wird angezeigt.
 . Gib einen *Namen* ein.
 . Wähle zum Beispiel das Ereignis *Auftragsänderung » Warenausgang Gebucht*.
@@ -492,36 +570,7 @@ Mit den Ereignisaktionen des Plugins kannst Du mit WooCommerce Informationen üb
 . Wähle eine *Aktion mit Typ: Plugin » Versandbestätigung an WooCommerce senden*.
 . *Speichere* die Einstellungen.
 
-[[table-woocommerce-event-procedures]]
-.Ereignisaktionen für WooCommerce
-[cols="2,3a"]
-|===
-|Einstellung |Erläuterung
-
-| *Sende Auftrag "Zahlung ausstehend" an WooCommerce*
-| Verschiebt den WooCommerce-Auftrag in den Status *Zahlung ausstehend*.
-
-| *Sende Auftrag "In Bearbeitung" an WooCommerce*
-| Verschiebt den WooCommerce-Auftrag in den Status *In Bearbeitung*.
-
-| *Sende Auftrag "In Wartestellung" an WooCommerce*
-| Verschiebt den WooCommerce-Auftrag in den Status *In Wartestellung*.
-
-| *Sende Auftrag "Fertiggestellt" an WooCommerce*
-| Verschiebt den WooCommerce-Auftrag in den Status *Fertiggestellt*.
-
-| *Sende Auftrag "Storniert/Abgebrochen" an WooCommerce*
-| Verschiebt den WooCommerce-Auftrag in den Status *Storniert/Abgebrochen*.
-
-| *Sende Auftrag "Rückerstattet" an WooCommerce*
-| Verschiebt den WooCommerce-Auftrag in den Status *Rückerstattet*.
-
-| *Sende Auftrag "Fehlgeschlagen" an WooCommerce*
-|Verschiebt den WooCommerce-Auftrag in den Status *Fehlgeschlagen*.
-
-|===
-
-[faq]
+[#faq]
 == FAQ und Fehlersuche
 
 [.collapseBox]
