--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -359,6 +359,7 @@
 ** xref:online-store:setting-up-online-store.adoc[Old: Setting up Callisto online store]
 * External online shops
 ** xref:external-online-shops:shopify-plugin.adoc[Shopify plugin]
+** xref:external-online-shops:woocommerce.adoc[WooCommerce plugin]
 * xref:markets:markets.adoc[Markets and price search engines]
 ** xref:markets:price-search-engines.adoc[Price search engines]
 *** xref:markets:basic-price-search-engine.adoc[Basic Price Search Engine]
