--- a/docs/de-de/modules/maerkte/pages/best-practice-limango-teillieferung.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practice-limango-teillieferung.adoc
@@ -37,7 +37,7 @@ Erstelle nun eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion], u
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Hinweis:_* Der Status für die Ereignisaktion wurde beispielhaft gewählt. Wähle einen Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen bereits vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#1220[erstellen]. +
+*_Hinweis:_* Der Status für die Ereignisaktion wurde beispielhaft gewählt. Wähle einen Status, der am besten zu deinem Arbeitsablauf passt. Dazu kannst du einen bereits vorhandenen Status wählen oder einen eigenen Status xref:auftraege:auftraege-verwalten.adoc#_neuen_status_erstellen[erstellen]. +
 Beachte, dass mit den hier vorgeschlagenen Ereignissen und Filtern auch alle Positionen in Hauptaufträgen als versendet gekennzeichnet werden.
 
 [[ereignisaktion-teillieferung-limango]]
@@ -48,7 +48,7 @@ Beachte, dass mit den hier vorgeschlagenen Ereignissen und Filtern auch alle Pos
 
 | *Ereignis*
 | *Auftragsänderung: Warenausgang gebucht*
-| 
+|
 
 | *Filter 1*
 | *Auftrag > Herkunft*
