--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -8,3 +8,5 @@
 Diese Seite ist nicht Teil des Handbuchs. Aber falls du trotzdem auf dieser Seite gelandet bist: Hallo und herzlich willkommen. Diese Seite ist nur eine Testseite, auf der wir Handbuch-Formatierungen ausprobieren - damit unser Handbuch immer schöner wird.
 
 image::maerkte:spielwiesenbild.png[]
+
+image::maerkte:dieses-bild-gibt-es-nicht.png[]
